@@ -40,19 +40,21 @@ import org.slf4j.LoggerFactory;
 /** Information about the Solr request/response held in a {@link ThreadLocal}. */
 public class SolrRequestInfo {
 
-  protected static final int MAX_STACK_SIZE = 10;
+  private static final int MAX_STACK_SIZE = 10;
 
-  protected static final ThreadLocal<Deque<SolrRequestInfo>> threadLocal = ThreadLocal.withInitial(LinkedList::new);
+  private static final ThreadLocal<Deque<SolrRequestInfo>> threadLocal = ThreadLocal.withInitial(LinkedList::new);
 
-  protected SolrQueryRequest req;
-  protected SolrQueryResponse rsp;
-  protected Date now;
+  private int refCount = 1; // prevent closing when still used
+
+  private SolrQueryRequest req;
+  private SolrQueryResponse rsp;
+  private Date now;
   protected HttpServletRequest httpRequest;
-  protected TimeZone tz;
-  protected ResponseBuilder rb;
-  protected List<Closeable> closeHooks;
-  protected SolrDispatchFilter.Action action;
-  protected boolean useServerToken = false;
+  private TimeZone tz;
+  private ResponseBuilder rb;
+  private List<Closeable> closeHooks;
+  private SolrDispatchFilter.Action action;
+  private boolean useServerToken = false;
 
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
@@ -70,23 +72,25 @@ public class SolrRequestInfo {
     Deque<SolrRequestInfo> stack = threadLocal.get();
     if (info == null) {
       throw new IllegalArgumentException("SolrRequestInfo is null");
-    } else if (stack.size() <= MAX_STACK_SIZE) {
-      stack.push(info);
-    } else {
+    } else if (stack.size() > MAX_STACK_SIZE) {
       assert false : "SolrRequestInfo Stack is full";
       log.error("SolrRequestInfo Stack is full");
     }
+    log.trace("{} {}", info, "setRequestInfo()");
+    assert !info.isClosed() : "SRI is already closed (odd).";
+    stack.push(info);
   }
 
-  /** Removes the most recent SolrRequestInfo from the stack */
+  /** Removes the most recent SolrRequestInfo from the stack.  Close hooks are called. */
   public static void clearRequestInfo() {
+    log.trace("clearRequestInfo()");
     Deque<SolrRequestInfo> stack = threadLocal.get();
     if (stack.isEmpty()) {
       assert false : "clearRequestInfo called too many times";
       log.error("clearRequestInfo called too many times");
     } else {
       SolrRequestInfo info = stack.pop();
-      closeHooks(info);
+      info.close();
     }
   }
 
@@ -95,18 +99,25 @@ public class SolrRequestInfo {
    * we expect it to be empty by now because all "set" calls need to be balanced with a "clear".
    */
   public static void reset() {
+    log.trace("reset()");
     Deque<SolrRequestInfo> stack = threadLocal.get();
-    boolean isEmpty = stack.isEmpty();
+    assert stack.isEmpty() : "SolrRequestInfo Stack should have been cleared.";
     while (!stack.isEmpty()) {
       SolrRequestInfo info = stack.pop();
-      closeHooks(info);
+      info.close();
     }
-    assert isEmpty : "SolrRequestInfo Stack should have been cleared.";
   }
 
-  private static void closeHooks(SolrRequestInfo info) {
-    if (info.closeHooks != null) {
-      for (Closeable hook : info.closeHooks) {
+  private synchronized void close() {
+    log.trace("{} {}", this, "close()");
+
+    if (--refCount > 0) {
+      log.trace("{} {}", this, "not closing; still referenced");
+      return;
+    }
+
+    if (closeHooks != null) {
+      for (Closeable hook : closeHooks) {
         try {
           hook.close();
         } catch (Exception e) {
@@ -114,6 +125,7 @@ public class SolrRequestInfo {
         }
       }
     }
+    closeHooks = null;
   }
 
   public SolrRequestInfo(SolrQueryRequest req, SolrQueryResponse rsp) {
@@ -186,6 +198,9 @@ public class SolrRequestInfo {
   public void addCloseHook(Closeable hook) {
     // is this better here, or on SolrQueryRequest?
     synchronized (this) {
+      if (isClosed()) {
+        throw new IllegalStateException("Already closed!");
+      }
       if (closeHooks == null) {
         closeHooks = new LinkedList<>();
       }
@@ -213,13 +228,24 @@ public class SolrRequestInfo {
     this.useServerToken = use;
   }
 
+  private synchronized boolean isClosed() {
+    return refCount <= 0;
+  }
+
   public static ExecutorUtil.InheritableThreadLocalProvider getInheritableThreadLocalProvider() {
     return new ExecutorUtil.InheritableThreadLocalProvider() {
       @Override
       @SuppressWarnings({"unchecked"})
       public void store(@SuppressWarnings({"rawtypes"})AtomicReference ctx) {
         SolrRequestInfo me = SolrRequestInfo.getRequestInfo();
-        if (me != null) ctx.set(me);
+        if (me != null) {
+          // increase refCount in store(), while we're still in the thread of the provider to avoid
+          //  a race if this thread finishes its work before the pool'ed thread runs
+          synchronized (me) {
+            me.refCount++;
+          }
+          ctx.set(me);
+        }
       }
 
       @Override
